# my-cpp

./: MoveFunction.cpp  MyUtils.hpp  PassWordsChecker.cpp  PrintVector.cpp  README.md  Routes.cpp  TypesRouter.cpp  ValueRouter.cpp  ValuesRouter.cpp  VariadicTemplate.cpp  arithmetic.cpp  binary-search-rounddown.cpp  binary_search.cpp  dfs-alogrithm.cpp  dp.cpp  dynamic_static_cast.cpp  enable_if_t.cpp  enum_class.cpp  fold_expressions.cpp  fold_expressions3.cpp  function_overload.cpp  gen-re-table.cpp  heap-sort.cpp  macro-joint.cpp  macro.cpp  math.cpp  merge-sort.cpp  my-database.cpp  my-vector.cpp  my_boost.cpp  my_gtest.cpp  operator-overloading.cpp  polymorphism.cpp  pop-sel-sort.cpp  print-array.cpp  quick-sort-sel.cpp  quote.cpp  sizeof_types.cpp  template-specialization.cpp  template_in_template.cpp  (+6 more)
Algrithom/: HumanReadable.cpp  Matrix.cpp  container_of.cpp  dynamic_static_cast.cpp  macro.cpp  my-vector.cpp  quick-sort-backward.cpp
DHT20/DHT20.GLM/: Makefile  README.md  dht20_plugin.c
DHT20/DHT20.deepseek/: compile.sh  compile_lxpanel_dht20.sh  dth_sensor  lxpanel_dht20.c
DHT20/DHT20.gemini/: Makefile  lxpanel-dht20.c
DHT20/DHT20.lingma/: Makefile  dht20_plugin.c
DHT20/DHT20.qwen/: Makefile  dht20_panel_plugin.c  dth_sensor.c
algrithom/: Logger.cpp  merge-sort.cpp  quick-sort.cpp
c++11/: Bitset.cpp  Decltype.cpp  Deletor.cpp  HashFunction.cpp  MoveAwareClass.cpp  Optional.cpp  PerfectForward.cpp  SharedPtr.cpp  Singleton.cpp  UniquePtr.cpp  VariadicTemplateLogger.cpp  WeakPtr.cpp  bracket-initialize.cpp  demangle.cpp  fold_expressions2.cpp  for_for_each.cpp  operator-overloading.cpp  reinterpret_cast.cpp  sizeof_types.cpp  tuple.cpp  typeid.cpp
c++20/modules/: CMakeLists.txt  README.md  main.cpp  mathutils.cppm
ccc2020_69015657/: .gitlab-ci.yml  CMakeLists.txt
ccc2020_69015657/src/: main.cpp
ccc2020_69015657/src/comm/: City.cpp  City.hpp  FundsBase.cpp  FundsBase.hpp  Pool.cpp  Pool.hpp  Week.cpp  Week.hpp
ccc2020_69015657/src/disinfectant/: Disinfectant.cpp  Disinfectant.hpp
ccc2020_69015657/src/io/: Io.cpp  Io.hpp
ccc2020_69015657/src/logger/: Logger.cpp  Logger.hpp
ccc2020_69015657/src/minFunds/: MinFunds.cpp  MinFunds.hpp
ccc2020_69015657/src/other/: OtherFunds.cpp  OtherFunds.hpp
ccc2020_69015657/src/surgicalMask/: SurgicalMask.cpp  (+1 more)
ccc2020_69015657/test/: TestDisinfectant.cpp  TestIo.cpp  TestMinFunds.cpp  TestOtherFunds.cpp  TestSurgicalMask.cpp  TestTotalFunds.cpp
design_pattern/: acyclic_visitor.cpp
design_pattern/Adapter/: Adapter_class.cpp  Adapter_object.cpp
design_pattern/Decorator/: DecoratorModem.cpp
design_pattern/Proxy/: ImageProxy.cpp
design_pattern/TemplateMethod/: TemplateMethod.cpp
design_pattern/Visitor/: visitor.cpp
design_pattern/acyclic_visitor/: DosModemConfigure.hpp  HayesModem.cpp  HayesModem.hpp  Modem.hpp  UnixModemConfigure.cpp  ZoomModem.cpp  ZoomModemVisitor.hpp  main.cpp
design_pattern/class_diagram/: TemplateMethod.wsd
driver/net_device/: Makefile
gtest/: Arithmetics.cpp  Arithmetics.hpp  Transcript.cpp  Transcript.hpp
gtest/ut/: CMakeLists.txt  TestAdd.cpp  TestPAdd.cpp  TestTranscript.cpp  main.cpp
homework/: Students.cpp
homework/leifeng/: LeiFeng.cpp  LeiFeng.md  LeiFeng.wsd
kernel/: Makefile  helloworld.c
kernel/net_device/: Makefile  net_device.c
makefile_practice/: Makefile  hello.cpp  hello.hpp  main.cpp
makefile_practice/inc/: hello.hpp
makefile_practice/src/: hello.cpp
meta/: is_same_v.cpp
net/: CMakeLists.txt  README.md
net/client/: CMakeLists.txt  client_win.cpp
net/reference/: discover_server.c  win_discover.c
net/server/: CMakeLists.txt  server.cpp
net/toolchains/: aarch64-linux-gnu.cmake  mingw-x86_64.cmake
serials/: rs485_test.c
simd/: avx2_test.cpp  neon_test.cpp
sml/: my_sml.cpp
template/: template-specialization.cpp  template_keyword.cpp
threads/: threads_async.cpp  threads_atomic.cpp
(+11 files in other folders)
